--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -159,7 +159,7 @@
     display: none;
     position: absolute;
     z-index: 1;
-    background: rgba(0, 0, 0, .1);
+    background: rgba(0, 0, 0, 1.9);
     backdrop-filter: blur(50px);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -177,6 +177,63 @@
   }
 
   /* BRAKPOINTS >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+  @media (max-width: 1408px) {
+    /*XL ↓ *********************************/
+
+
+  .icons {
+    display: inline-flex;
+  }
+
+  #check:checked ~ .icons #menu-icon {
+    display: none;
+  }
+
+  .icons #close-icon {
+    display: none;
+  }
+
+  #check:checked ~ .icons #close-icon {
+    display: block;
+  }
+
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background: rgba(0, 0, 0, .1);
+    backdrop-filter: blur(50px);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    overflow: hidden;
+    transition: .3s ease;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #check:checked ~ .navbar {
+    height: 50.8rem;
+  }
+
+  .navbar a {
+    display: block;
+    font-size: 1.1rem;
+    margin: 1rem 0;
+    text-align: center;
+    transition: .3s ease;
+    opacity: 0;
+  }
+
+  #check:checked ~ .navbar a {
+    display: block;
+    transform: translateY(0);
+    opacity: 1;
+    transition-delay: calc(.15s * var(--1));
+  }
+}
+
+
   @media (max-width: 992px) {
     /*LG ↓ *********************************/
 
