--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -159,7 +159,7 @@
     display: none;
     position: absolute;
     z-index: 1;
-    background: rgba(0, 0, 0, 1.9);
+    background: rgba(0, 0, 0, .1);
     backdrop-filter: blur(50px);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
