--- a/src/views/templates/alert.ejs
+++ b/src/views/templates/alert.ejs
@@ -1,7 +1,9 @@
-<% if (message ) { %>
-    <p id="alert" class="alert">
-        <%= message %>
-    </p>
-<% } else { %>
-    <div id="alert"></div>
-<%}%>
+<div id="alert-container">
+  <% if (message ) { %>
+  <p id="alert" class="alert">
+    <%= message %>
+  </p>
+  <% } else { %>
+  <div id="alert"></div>
+  <%}%>
+</div>
