--- a/src/views/templates/blog/blogCreate.ejs
+++ b/src/views/templates/blog/blogCreate.ejs
@@ -2,24 +2,26 @@
 <script src="https://cdn.jsdelivr.net/npm/simplemde@1.11.2/dist/simplemde.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplemde@1.11.2/dist/simplemde.min.css">
 
+<div id="create-blog-container">
+  
 <h1 class="section-title">
   <%= title %>
 </h1>
 <div>
   <form id="courseForm" action="<%= action %>" method="POST" enctype="multipart/form-data">
     <!-- Form action should match the route for creating a course -->
-    <label for="title">Title:</label><br>
+    <label for="title">Titulo:</label><br>
     <input type="text" id="title" name="title"><br><br>
 
-    <label for="description">Description:</label><br>
+    <label for="description">Descripcion:</label><br>
     <input id="description" name="description"><br><br>
 
-    <label for="text_content">Text Content:</label><br>
+    <label for="text_content">contenido de texto:</label><br>
     <!-- Make sure to remove the style="display: none;" -->
     <textarea id="text_content" name="text_content"></textarea><br><br>
     <div id="markdownEditor"></div>
 
-    <label for="thumbnail">Thumbnail:</label><br>
+    <label for="thumbnail">subir miniatura:</label><br>
     <input type="file" name="thumbnail" accept="image/*"><br><br>
 
     <input type="hidden" name="author" value="<%= user %>">
@@ -34,6 +36,7 @@
       </p>
     <% } %>
   </form>
+</div>
 </div>
 
 <script>
@@ -51,3 +54,13 @@
     document.getElementById("text_content").value = markdownValue;
   });
 </script>
+
+
+<style>
+  #create-blog-container{
+    margin: 6.2rem auto;
+  }
+  #courseForm{
+        margin: 2.2rem 0;
+    }
+</style>
