--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -18,6 +18,7 @@
 
       <!-- PLAYER -->
       <!-- ========================================================= -->
+      <!-- Video link -->
       <div>
         <div class="video-container mb-4">
           <div class="row">
@@ -26,9 +27,18 @@
             </div>
           </div>
         </div>
+      </div>
 
-
-
+      <!-- Video player for streaming -->
+      <div class="video-container mb-4">
+        <div class="row">
+          <div class="col-lg-12">
+            <video controls>
+              <source src="<%= course.videoPath %>" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+        </div>
       </div>
 
       <!-- COURSE DETAIL -->
