--- a/src/public/css/blog/blogDetail.css
+++ b/src/public/css/blog/blogDetail.css
@@ -10,3 +10,6 @@
   border-bottom: 1px solid #ccc; /* Add border to thumbnail */
   padding-bottom: 10px; /* Add space below thumbnail */
 }
+#blog-info{
+  
+}
