--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -174,6 +174,7 @@
 
   .dropdown:hover .dropdown-menu {
     display: block;
+    z-index: 1001;
   }
 
   /* BRAKPOINTS >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
@@ -203,23 +204,24 @@
     left: 0;
     width: 100%;
     height: 0;
-    background: rgba(0, 0, 0, .1);
+    background: rgba(0, 0, 0, .5);
     backdrop-filter: blur(50px);
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
-    overflow: hidden;
     transition: .3s ease;
     flex-direction: column;
     align-items: center;
+    opacity: 0;
   }
 
-  #check:checked ~ .navbar {
-    height: 50.8rem;
+  #check:checked ~ .navbar { /*show menu*/
+    height: 20.8rem;
+    opacity: 100;
   }
 
   .navbar a {
     display: block;
     font-size: 1.1rem;
-    margin: 1rem 0;
+    margin: .3rem 0;
     text-align: center;
     transition: .3s ease;
     opacity: 0;
@@ -241,10 +243,14 @@
       padding: 1.3rem 5%;
     }
 
+    .navbar{
+      background: rgba(0, 0, 0, .5);
+    }
+
     .navbar a {
       /* Adjust anchor tags to display in a single column */
       display: inline-block;
-      margin: 1rem 1.3rem;
+      margin: .3rem 1.3rem;
       /* Add margin for better spacing */
     }
 
@@ -285,10 +291,9 @@
       left: 0;
       width: 100%;
       height: 0;
-      background: rgba(0, 0, 0, .1);
+      background: rgba(0, 0, 0, .5);
       backdrop-filter: blur(50px);
       box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
-      overflow: hidden;
       transition: .3s ease;
       flex-direction: column;
       align-items: center;
@@ -296,13 +301,13 @@
 
     #check:checked~.navbar {
       /* on click display navbar div*/
-      height: 50.8rem;
+      height: 20.8rem;
     }
 
     .navbar a {
       display: block;
       font-size: 1.1rem;
-      margin: 1rem 0;
+      margin: .3rem 0;
       text-align: center;
       transition: .3s ease;
       opacity: 0;
@@ -323,10 +328,13 @@
       width: 100px; /* Adjust width for smaller screens */
       height: 50px; /* Adjust height for smaller screens */
     }
+    .navbar{
+      background: rgba(0, 0, 0, .5);
+    }
     .navbar a {
       /* Adjust anchor tags to display in a single column */
       display: block;
-      margin: 1rem 0;
+      margin: .3rem 0;
       /* Adjust margin for better spacing */
     }
   }
