--- a/src/views/templates/auth/emailSent.ejs
+++ b/src/views/templates/auth/emailSent.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container email-sent-cont">
     <h1 class="section-title">Email sent!</h1>
     <br>
     <p>Check your email Inbox to get the recovery code.</p>
@@ -10,5 +10,8 @@
         justify-content: center;
         align-items: center;
         text-align: center;
+    }
+    .email-sent-cont{
+        margin: 6.2rem auto;
     }
 </style>
