--- a/src/views/templates/courseCreate/courseCreate.ejs
+++ b/src/views/templates/courseCreate/courseCreate.ejs
@@ -15,11 +15,11 @@
             <textarea id="text_content" name="text_content"></textarea><br><br>
 
             <label for="video">subir video:</label><br>
-            <input type="file" name="video" accept="video/*">
-
+            <input type="file" name="video" accept="video/*"><br><br>
+            <hr>
             <label for="thumbnail">subir miniatura:</label><br>
             <input type="file" name="thumbnail" accept="image/*"><br><br>
-
+            <hr>
             <h3>Configurar precio</h3>
             <label for="price">ARS Price:</label><br>
             <input type="number" id="ars_price" name="ars_price"><br><br>
