--- a/src/views/templates/courseUpdate/courseUpdate.ejs
+++ b/src/views/templates/courseUpdate/courseUpdate.ejs
@@ -1,39 +1,57 @@
+<div id="update-course-container">
+    
+    <h1 class="section-title">Edit Course</h1>
+    <form id="courseEditForm" action="/api/course/<%= course.id %>/update" method="POST"
+        enctype="multipart/form-data">
+        <label for="title">Title:</label><br>
+        <input type="text" id="title" name="title" value="<%= course.title %>"><br><br>
 
-            <h1>Edit Course</h1>
-            <form id="courseEditForm" action="/api/course/<%= course.id %>/update" method="POST"
-                enctype="multipart/form-data">
-                <label for="title">Title:</label><br>
-                <input type="text" id="title" name="title" value="<%= course.title %>"><br><br>
+        <label for="description">Description:</label><br>
+        <input id="description" name="description" value="<%= course.description %>">
+        </input><br><br>
 
-                <label for="description">Description:</label><br>
-                <input id="description" name="description" value="<%= course.description %>">
-                </input><br><br>
+        <label for="text_content">Text Content:</label><br>
+        <textarea id="text_content" name="text_content" value="<%= course.text_content %>"></textarea><br><br>
 
-                <label for="text_content">Text Content:</label><br>
-                <textarea id="text_content" name="text_content" value="<%= course.text_content %>"></textarea><br><br>
+        <label for="video">subir video:</label><br>
+    <input type="file" name="video" accept="video/*"><br><br>
+    <hr>
+    <label for="thumbnail">subir miniatura:</label><br>
+    <input type="file" name="thumbnail" accept="image/*"><br><br>
+    <hr>
 
-                <label for="video_link">Video Link:</label><br>
-                <input id="video_link" name="video_link" value="<%= course.video_link %>"><br><br>
+        <label for="ars_price">ARS Price:</label><br>
+        <input type="number" id="ars_price" name="ars_price" value="<%= course.ars_price %>"><br><br>
 
-                <label for="ars_price">ARS Price:</label><br>
-                <input type="number" id="ars_price" name="ars_price" value="<%= course.ars_price %>"><br><br>
+        <label for="usd_price">USD Price:</label><br>
+        <input type="number" id="usd_price" name="usd_price" value="<%= course.usd_price %>"><br><br>
 
-                <label for="usd_price">USD Price:</label><br>
-                <input type="number" id="usd_price" name="usd_price" value="<%= course.usd_price %>"><br><br>
+        <label for="discount">Discount:</label><br>
+        <input type="number" id="discount" name="discount" value="<%= course.discount %>"><br><br>
 
-                <label for="discount">Discount:</label><br>
-                <input type="number" id="discount" name="discount" value="<%= course.discount %>"><br><br>
+        <label for="active">Active:</label><br>
+        <input type="checkbox" id="active" name="active" value="true" <% if (course.active) { %> checked <% } %>
+            ><br><br>
 
-                <label for="active">Active:</label><br>
-                <input type="checkbox" id="active" name="active" value="true" <% if (course.active) { %> checked <% } %>
-                    ><br><br>
+            <label for="thumbnail">Thumbnail:</label><br>
+            <input type="file" id="thumbnail" name="thumbnail"><br><br>
 
-                    <label for="thumbnail">Thumbnail:</label><br>
-                    <input type="file" id="thumbnail" name="thumbnail"><br><br>
+            <label for="length">Length:</label><br>
+            <input type="number" id="length" name="length" value="<%= course.length %>"><br><br>
 
-                    <label for="length">Length:</label><br>
-                    <input type="number" id="length" name="length" value="<%= course.length %>"><br><br>
+            <input type="hidden" id="courseId" name="courseId" value="<%= course.id %>">
+            <button type="submit">Update Course</button>
+    </form>
+</div>
 
-                    <input type="hidden" id="courseId" name="courseId" value="<%= course.id %>">
-                    <button type="submit">Update Course</button>
-            </form>
+<style>
+    #update-course-container{
+        margin: 6.2rem auto;
+    }
+    #courseEditForm{
+        margin: 2.2rem 0;
+    }
+    body{
+        background: #f7e3bf;
+      }
+</style>
