--- a/src/views/templates/blog/blogDeleteConfirmation.ejs
+++ b/src/views/templates/blog/blogDeleteConfirmation.ejs
@@ -1,4 +1,5 @@
 
+  <div id="blog-delete-confirmation-cont">
     <h3>Are you sure you want to delete blog: <%= blog.title %>?</h3>
     <form method="POST" action="<%= action %>" >
         <input type="hidden" name="_method" value="DELETE">
@@ -6,3 +7,11 @@
         <input type="submit" value="Delete">
     </form>
     <a href="/api/blog">Cancel</a>
+
+  </div>
+
+    <style>
+        #blog-delete-confirmation-cont {
+            margin: 6.2rem auto;
+        }
+    </style>
