--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -1,69 +1,71 @@
 <div id="course-detail-container">
   <% if (user.role==="admin" ) { %>
-    <div class="course-admin-options opacity-50">
+  <div class="course-admin-options opacity-50">
+    <div>
       <div>
-        <div>
-          <button class="btn">
-            <p><a class="text-muted" href="/api/course/<%= course.id %>/update?courseId=<%= course.id %>"><i
-                  class="fas fa-edit me-2"></i>Edit course</a></p>
-          </button>
-          <button class="btn">
-            <p><a class="text-muted" href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>"><i
-                  class="fas fa-trash-alt me-2"></i>Delete course</a></p>
-          </button>
-        </div>
+        <button class="btn">
+          <p>
+            <a
+              class="text-muted"
+              href="/api/course/<%= course.id %>/update?courseId=<%= course.id %>"
+              ><i class="fas fa-edit me-2"></i>Edit course</a
+            >
+          </p>
+        </button>
+        <button class="btn">
+          <p>
+            <a
+              class="text-muted"
+              href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>"
+              ><i class="fas fa-trash-alt me-2"></i>Delete course</a
+            >
+          </p>
+        </button>
       </div>
     </div>
-    <% } %>
+  </div>
+  <% } %>
 
-      <!-- PLAYER -->
-      <!-- ========================================================= -->
-      <!-- Video link -->
-      <div>
-        <div class="video-container mb-4">
-          <div class="row">
-            <div class="col-lg-12">
-              <iframe src="<%= course.video_link %>" width="560" height="315" allowfullscreen controls></iframe>
-            </div>
-          </div>
-        </div>
+  <!-- PLAYER -->
+  <!-- ========================================================= -->
+
+  <!-- Video player for streaming -->
+  <div class="video-container mb-4">
+    <div class="row">
+      <div class="col-lg-12">
+        
+        <video controls> <!--worksss !!!-->
+          <source src="/uploads/videos/try1.webm" type="video/webm" />
+          Your browser does not support the video tag.
+        </video>
+        
+        <video controls>
+          <source src="<%= course.video %>" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
       </div>
+    </div>
+  </div>
 
-      <!-- Video player for streaming -->
-      <div class="video-container mb-4">
-        <div class="row">
-          <div class="col-lg-12">
-            <video controls>
-              <source src="<%= course.videoPath %>" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-          </div>
-        </div>
-      </div>
+  <!-- COURSE DETAIL -->
+  <!-- ========================================================= -->
+  <div>
+    <p class="text-muted">
+      <%= course.updated_at %>
+      <span
+        ><img
+          class="avatar ms-4 me-2"
+          src="<%= course.author.avatar %>"
+          alt="author_avatar" /></span
+      ><span class="fw-bold"> <%= course.author.username %> </span> •
+      <span> <%= course.author.name %> </span>
+    </p>
+    <div>
+      <h1><%= course.title %></h1>
+    </div>
+    <h3><%= course.description %></h3>
+    <p><%= course.text_content %></p>
+  </div>
 
-      <!-- COURSE DETAIL -->
-      <!-- ========================================================= -->
-      <div>
-        <p class="text-muted">
-          <%= course.updated_at %> <span><img class="avatar ms-4 me-2" src="<%= course.author.avatar %>"
-                alt="author_avatar"></span><span class="fw-bold">
-              <%= course.author.username %>
-            </span> • <span>
-              <%= course.author.name %>
-            </span>
-        </p>
-        <div>
-          <h1>
-            <%= course.title %>
-          </h1>
-        </div>
-        <h3>
-          <%= course.description %>
-        </h3>
-        <p>
-          <%= course.text_content %>
-        </p>
-      </div>
-
-      <!--SCRIPTS-------------------------------------------------------------------------------------------------------------------->
+  <!--SCRIPTS-------------------------------------------------------------------------------------------------------------------->
 </div>
