--- a/src/public/css/courseDetail.css
+++ b/src/public/css/courseDetail.css
@@ -1,30 +1,44 @@
-/* Minimal styling for the course container */
+/* Center the course detail container */
+#course-detail-container {
+  margin: 6.2rem auto;
+  padding: 0 .3rem;
+  width: 100%;
+}
+
+/* Make the video player responsive */
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio for responsive scaling */
+  margin-bottom: 2rem; /* Adjust as needed */
+}
+
+#course-video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+/* Responsive layout for course modules */
 .course-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: flex-start;
 }
 
-#course-detail-container{
-  margin: 8.2rem auto;
-}
-
-/* Styling for the first module */
-.first-module {
-  /* Styles for the first module */
-  /* You can adjust the width, height, borders, etc. */
-  flex-basis: 80%;
-  padding: 20px;
-  border: 1px solid #ccc;
-}
-
-/* Styling for the modules list */
+.first-module,
 .modules-list {
-  /* Styles for the list of modules */
-  /* You can adjust the width, height, margins, etc. */
-  flex-basis: 20%;
-  padding: 20px;
-  border: 1px solid #ccc;
+  flex-basis: calc(50% - 20px); /* Adjust the module width and spacing */
+  margin-bottom: 20px;
+  box-sizing: border-box;
 }
 
-
+/* Media query for smaller screens */
+@media screen and (max-width: 768px) {
+  .first-module,
+  .modules-list {
+    flex-basis: 100%; /* On smaller screens, modules take full width */
+  }
+}
