--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -33,14 +33,10 @@
   <div class="video-container mb-4">
     <div class="row">
       <div class="col-lg-12">
-        
-        <video controls> <!--worksss !!!-->
-          <source src="/uploads/videos/try1.webm" type="video/webm" />
-          Your browser does not support the video tag.
-        </video>
-        
-        <video controls>
+        <video id="course-video" controls>
           <source src="<%= course.video %>" type="video/mp4" />
+          <source src="<%= course.video %>" type="video/webm" />
+          <source src="<%= course.video %>" type="video/ogg" />
           Your browser does not support the video tag.
         </video>
       </div>
