--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -45,7 +45,7 @@
 
   <!-- COURSE DETAIL -->
   <!-- ========================================================= -->
-  <div>
+  <div id="course-text-container">
     <p class="text-muted">
       <%= course.updated_at %>
       <span
