--- a/src/public/css/blog/blogList.css
+++ b/src/public/css/blog/blogList.css
@@ -140,6 +140,9 @@
     gap: 10px;
     margin-top: 15px;
   }
+  .blog-actions i {
+    color: #fff;
+  }
   
   .blog-item .blog-actions a {
     padding: 8px 15px;
