--- a/src/public/css/courses.css
+++ b/src/public/css/courses.css
@@ -138,6 +138,9 @@ h1 {
   gap: 10px;
   margin-top: 15px;
 }
+.course-actions a i{
+  color: #fff;
+}
 
 .course-item .course-actions a {
   padding: 8px 15px;
