--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -57,12 +57,12 @@
             <div class="course-actions">
               <p class="text-white">
                 <a class='text-muted' href="/api/course/<%= course.id %>/update"><i
-                    class="fas fa-edit me-2"></i>Edit</a>
+                    class="fas fa-edit me-2"></i></a>
                 <input type="hidden" name="author" value="<%= course.author %>">
               </p>
               <p>
                 <a class='text-muted' href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>"><i
-                    class="fas fa-trash-alt me-2"></i>Delete</a>
+                    class="fas fa-trash-alt me-2"></i></a>
               </p>
             </div>
             <% }%>
