--- a/src/public/css/courseDetail.css
+++ b/src/public/css/courseDetail.css
@@ -1,8 +1,14 @@
+#page-coursedetail-container{
+  margin: 0 ;
+  width: 100%;
+}
+
 /* Center the course detail container */
 #course-detail-container {
-  margin: 6.2rem auto;
-  padding: 0 .3rem;
+  padding: 0 0.3rem;
   width: 100%;
+  margin-top: 0; /* Adjust to override top margin */
+  padding-top: 6.2rem; /* Create space from the top */
 }
 
 /* Make the video player responsive */
@@ -13,20 +19,18 @@
   margin-bottom: 2rem; /* Adjust as needed */
 }
 
-#course-text-container{
-  padding: 0 .8rem;
+#course-text-container {
+  padding: 0 0.8rem;
 }
 
 #course-video {
   position: absolute;
   width: 100%;
-  max-width: 1443px;
+  max-width: 100%;
   height: 100%;
   top: 0;
   left: 0;
 }
-
-
 
 /* Responsive layout for course modules */
 .course-container {
@@ -53,6 +57,7 @@
 /* Scale text based on video container width */
 #course-detail-container {
   font-size: calc(0.9vw + 0.5rem); /* Adjust the base font size as needed */
+  
 }
 
 /* Additional styling for text elements if necessary */
