--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -1,64 +1,91 @@
-<div id="page-coursedetail-container">
-  <div id="course-detail-container">
-    <!-- PLAYER -->
-    <!-- ========================================================= -->
-
-    <!-- Video player for streaming -->
-    <div class="video-container mb-4">
-      <div class="row">
-        <div class="col-lg-12">
-          <video id="course-video" controls>
-            <source src="<%= course.video %>" type="video/mp4" />
-            <source src="<%= course.video %>" type="video/webm" />
-            <source src="<%= course.video %>" type="video/ogg" />
-            Your browser does not support the video tag.
-          </video>
-        </div>
+<div class="bg-course-detail">
+  <div class="background-blur"></div>
+<div class="container " style="margin: 6.2rem auto;">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="video-container mb-1">
+        <video id="course-video" controls class="img-fluid">
+          <source src="<%= course.video %>" type="video/mp4" />
+          <source src="<%= course.video %>" type="video/webm" />
+          <source src="<%= course.video %>" type="video/ogg" />
+          Your browser does not support the video tag.
+        </video>
       </div>
     </div>
+  </div>
 
-    <!-- COURSE DETAIL -->
-    <!-- ========================================================= -->
-    <div id="course-text-container">
-      <p class="text-muted">
-        <%= course.updated_at %>
-        <span
-          ><img
-            class="avatar ms-4 me-2"
-            src="<%= course.author.avatar %>"
-            alt="author_avatar" /></span
-        ><span class="fw-bold"> <%= course.author.username %> </span> •
-        <span> <%= course.author.name %> </span>
-        <% if (user.role==="admin" ) { %>
-        <span class="course-admin-options opacity-50">
-          <button class="btn">
-            <p>
-              <a
-                class="text-muted"
-                href="/api/course/<%= course.id %>/update?courseId=<%= course.id %>"
-                ><i class="fas fa-edit me-2"></i
-              ></a>
-            </p>
-          </button>
-          <button class="btn">
-            <p>
-              <a
-                class="text-muted"
-                href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>"
-                ><i class="fas fa-trash-alt me-2"></i
-              ></a>
-            </p>
-          </button>
-        </span>
-        <% } %>
-      </p>
+  <div class="row">
+    <div class="col-lg-12">
       <div>
-        <h1><%= course.title %></h1>
+        <p>
+          <%= course.updated_at %>
+          <span
+            ><img
+              class="avatar ms-4 me-2"
+              src="<%= course.author.avatar %>"
+              alt="author_avatar"
+          /></span>
+          <span class="fw-bold"> <%= course.author.username %> </span> •
+          <span> <%= course.author.name %> </span>
+          <% if (user.role==="admin" ) { %>
+          <span class="course-admin-options opacity-50">
+            <button class="btn">
+              <p>
+                <a
+                  class="text-muted"
+                  href="/api/course/<%= course.id %>/update?courseId=<%= course.id %>"
+                  ><i class="fas fa-edit me-2 text-white"></i
+                ></a>
+              </p>
+            </button>
+            <button class="btn">
+              <p>
+                <a
+                  class="text-muted"
+                  href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>"
+                  ><i class="fas fa-trash-alt me-2 text-white"></i
+                ></a>
+              </p>
+            </button>
+          </span>
+          <% } %>
+        </p>
+        <h2><%= course.title %></h2>
+        <h6><%= course.description %></h6>
       </div>
-      <h3><%= course.description %></h3>
       <p><%= course.text_content %></p>
     </div>
-
-    <!--SCRIPTS-------------------------------------------------------------------------------------------------------------------->
   </div>
 </div>
+</div>
+
+<style>
+.bg-course-detail {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
+.bg-course-detail::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../images/buonavibra-marce-frio.png");
+  background-size: cover;
+  background-position: center;
+  filter: blur(20px); /* Adjust the blur value as needed */
+  z-index: -1;
+}
+
+.container {
+  position: relative; /* Ensures z-index works correctly */
+  z-index: 1; /* Places the content above the blurred background */
+  color: white;
+  padding: 20px;
+}
+
+</style>
