--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -1,63 +1,64 @@
 <div class="bg-course-detail">
   <div class="background-blur"></div>
-<div class="container " style="margin: 6.2rem auto;">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="video-container mb-1">
-        <video id="course-video" controls class="img-fluid">
-          <source src="<%= course.video %>" type="video/mp4" />
-          <source src="<%= course.video %>" type="video/webm" />
-          <source src="<%= course.video %>" type="video/ogg" />
-          Your browser does not support the video tag.
-        </video>
+  <div class="container" style="margin: 6.2rem auto;">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <div class="video-container mb-1">
+          <video id="course-video" controls class="img-fluid">
+            <source src="<%= course.video %>" type="video/mp4" />
+            <source src="<%= course.video %>" type="video/webm" />
+            <source src="<%= course.video %>" type="video/ogg" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-lg-12">
-      <div>
-        <p>
-          <%= course.updated_at %>
-          <span
-            ><img
-              class="avatar ms-4 me-2"
-              src="<%= course.author.avatar %>"
-              alt="author_avatar"
-          /></span>
-          <span class="fw-bold"> <%= course.author.username %> </span> •
-          <span> <%= course.author.name %> </span>
-          <% if (user.role==="admin" ) { %>
-          <span class="course-admin-options opacity-50">
-            <button class="btn">
-              <p>
-                <a
-                  class="text-muted"
-                  href="/api/course/<%= course.id %>/update?courseId=<%= course.id %>"
-                  ><i class="fas fa-edit me-2 text-white"></i
-                ></a>
-              </p>
-            </button>
-            <button class="btn">
-              <p>
-                <a
-                  class="text-muted"
-                  href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>"
-                  ><i class="fas fa-trash-alt me-2 text-white"></i
-                ></a>
-              </p>
-            </button>
-          </span>
-          <% } %>
-        </p>
-        <h2><%= course.title %></h2>
-        <h6><%= course.description %></h6>
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <div>
+          <p>
+            <%= course.updated_at %>
+            <span
+              ><img
+                class="avatar ms-4 me-2"
+                src="<%= course.author.avatar %>"
+                alt="author_avatar"
+            /></span>
+            <span class="fw-bold"> <%= course.author.username %> </span> •
+            <span> <%= course.author.name %> </span>
+            <% if (user.role==="admin" ) { %>
+            <span class="course-admin-options opacity-50">
+              <button class="btn">
+                <p>
+                  <a
+                    class="text-muted"
+                    href="/api/course/<%= course.id %>/update?courseId=<%= course.id %>"
+                    ><i class="fas fa-edit me-2 text-white"></i
+                  ></a>
+                </p>
+              </button>
+              <button class="btn">
+                <p>
+                  <a
+                    class="text-muted"
+                    href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>"
+                    ><i class="fas fa-trash-alt me-2 text-white"></i
+                  ></a>
+                </p>
+              </button>
+            </span>
+            <% } %>
+          </p>
+          <h2><%= course.title %></h2>
+          <h6><%= course.description %></h6>
+        </div>
+        <p><%= course.text_content %></p>
       </div>
-      <p><%= course.text_content %></p>
     </div>
   </div>
 </div>
-</div>
+
 
 <style>
 .bg-course-detail {
