--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -35,7 +35,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Sohne:wght@400;700&display=swap" rel="stylesheet">
     <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    
+    <!-- scrollbar -->
+    <!-- SimpleBar CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.0/simplebar.min.css"
+    />
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.0/simplebar.min.css"
+/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.0/simplebar.min.js"></script>
+
 
 
 </head>
