--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="video-container mb-1">
-          <video id="course-video" controls class="img-fluid">
+          <video id="course-video" controls class="img-fluid shadow-lg">
             <source src="<%= course.video %>" type="video/mp4" />
             <source src="<%= course.video %>" type="video/webm" />
             <source src="<%= course.video %>" type="video/ogg" />
