--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -29,7 +29,7 @@
     <!-- courses -->
     <div class="courses-grid">
       <% courses.forEach((course, index)=> { %>
-        <div class="course-item backdrop-filter">
+        <div class="course-item backdrop-filter shadow-lg">
           <a href="<%= course.next %>">
             <img src="<%= course.thumbnail %>" alt="thumbnail-<%= course.slug %>" />
             <p class="timestamp text-white">
