--- a/src/views/templates/home.ejs
+++ b/src/views/templates/home.ejs
@@ -16,7 +16,8 @@
   });
 </script>
 
-<!-- hero -->
+<div class="home-page-container">
+  <!-- hero -->
 <div class="hero-container home-hero">
   <img class="hero-logo" src="images/white-logo-buonavibra.png" alt="">
 </div>
@@ -99,4 +100,5 @@
     </div>
   </div>
  </div>
+</div>
 </div>
