--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -1,6 +1,6 @@
 <div class="courses-page-container">
   <div class="courses-container">
-    <div class="section-title">
+    <div class="section-title z-index-1">
       <h1 class="text-white">
         <%= title %>
       </h1>
