--- a/src/public/css/courses.css
+++ b/src/public/css/courses.css
@@ -42,9 +42,11 @@ hr {
   text-align: center;
   margin-bottom: 2px;
   color: #EF7F72;
+  z-index: 1;
 }
 .section-title h1{
 text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); /* Adding shadow to the h1 */
+z-index: 1;
 }
 .timestamp {
   color: #777;
@@ -192,6 +194,7 @@ h1 {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+  z-index: 1;
 }
 
 .pagination a {
