--- a/src/public/css/blog/blogList.css
+++ b/src/public/css/blog/blogList.css
@@ -5,6 +5,9 @@
     background-position: center; /* Centers the background image */
     height: 100vh;
     width: 100vw;
+    min-height: 100vh; /* Ensures the container takes at least the full height of the viewport */
+    display: flex;
+    flex-direction: column;
   }
 
   /* Reset styles */
@@ -46,12 +49,12 @@
   
   /* Courses container */
   .blogs-container {
-    flex-grow: 1; /* Allows the container to grow and take available space */
-    overflow-y: auto; /* Enables vertical scrolling when content overflows */
     max-width: 1200px;
     margin: 6.2rem auto;
     padding: 20px;
     font-family: Arial, sans-serif;
+    flex-grow: 1; /* Allows the container to grow and take available space */
+    overflow-y: auto; /* Enables vertical scrolling when content overflows */
   }
   
   /* Style for the go back button */
