--- a/src/public/css/courses.css
+++ b/src/public/css/courses.css
@@ -13,13 +13,9 @@
 /* vignete overlay */
 .courses-page-container::before {
   content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.7) 100%);
   z-index: 0; /* Set a lower z-index to stay beneath the content */
+  height: 100%;
 }
 
 /* Reset styles */
