--- a/src/public/css/blog/blogList.css
+++ b/src/public/css/blog/blogList.css
@@ -10,6 +10,14 @@
     flex-direction: column;
   }
 
+  /* vignete overlay */
+.blog-page-container::before {
+  content: '';
+  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.7) 100%);
+  z-index: 0; /* Set a lower z-index to stay beneath the content */
+  height: 100%;
+}
+
   /* Reset styles */
   body {
     display: flex;
