--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -48,11 +48,11 @@
       <img src="images/user.png" alt="Placeholder Avatar" class="avatar">Editar Perfil
     </a>
     <% } %>
-    <a href="/api/logout" style="--i:11;">Salir</a>
+    <a href="/api/logout" style="--i:11; border: 2px solid white; border-radius: 10%; padding: 8px;">Salir</a>
     <% } else { %>
     <!-- Links for non-loggedin users -->
-    <a href="/api/login" style="--i:12;">Ingresar</a>
-    <a href="/api/signup" style="--i:13;">Registrar</a>
+    <a href="/api/login" style="--i:12; border: 2px solid white; border-radius: 10%; padding: 8px;">Ingresar</a>
+    <a href="/api/signup" style="--i:13; border: 2px solid white; border-radius: 10%; padding: 8px;">Registrar</a>
     <% } %>
   </nav>
 </header>
