--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -45,7 +45,7 @@
     </a>
     <% } else { %>
     <a href="/api/user-update/<%= user.id %>/confirm" style="--i:10;">
-      <img src="images/user.png" alt="Placeholder Avatar" class="avatar">Editar Perfil
+      <img src="../../images/user.png" alt="Placeholder Avatar" class="avatar">Editar Perfil
     </a>
     <% } %>
     <a href="/api/logout" style="--i:11; border: 2px solid white; border-radius: 10%; padding: 8px;">Salir</a>
