--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -63,9 +63,8 @@
 <style>
 .bg-course-detail {
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
-  overflow: hidden;
 }
 
 .bg-course-detail::before {
