--- a/src/views/templates/auth/login.ejs
+++ b/src/views/templates/auth/login.ejs
@@ -18,7 +18,7 @@
 
 <style>
     #login-page-container {
-        background-image: url("../../images/natural-background.jpg");
+        background-image: url("/images/natural-background.jpg");
         background-size: cover;
         background-position: center;
         /* Centers the background image */
