--- a/src/views/templates/auth/signup.ejs
+++ b/src/views/templates/auth/signup.ejs
@@ -25,7 +25,7 @@
 
 <style>
     #signup-page-container {
-        background-image: url("../../images/buonavibra-marce-frio.png");
+        background-image: url("/images/buonavibra-marce-frio.png");
         background-size: cover;
         background-position: center;
         /* Centers the background image */
