--- a/src/views/templates/navbar2.ejs
+++ b/src/views/templates/navbar2.ejs
@@ -1,5 +1,5 @@
 <header class="header shadow-lg">
-  <a href="/" class="logo"><img src="../../images/white-logo-buonavibra.png" alt=""></a>
+  <a href="/" class="logo"><img src="/images/white-logo-buonavibra.png" alt=""></a>
 
   <input type="checkbox" id="check">
   <label for="check" class="icons">
@@ -45,7 +45,7 @@
     </a>
     <% } else { %>
     <a href="/api/user-update/<%= user.id %>/confirm" style="--i:10;">
-      <img src="../../images/user.png" alt="Placeholder Avatar" class="avatar">Editar Perfil
+      <img src="/images/user.png" alt="Placeholder Avatar" class="avatar">Editar Perfil
     </a>
     <% } %>
     <a href="/api/logout" style="--i:11; border: 2px solid white; border-radius: 10%; padding: 8px;">Salir</a>
