--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -74,7 +74,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../../images/buonavibra-marce-frio.png");
+  background-image: url("/images/buonavibra-marce-frio.png");
   background-size: cover;
   background-position: center;
   filter: blur(20px); /* Adjust the blur value as needed */
